[package]
name = "genesis2000"
authors = ["GUO <guobbs@live.com> <>"]
version = "0.2.0"
edition = "2021"
description = "Genesis2000 script development interface"
license = "MIT"
repository = "https://github.com/guobbs/genesis2000.git"
keywords = ["genesis2000", "genesis"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
regex = "1.8.1"
